...

    },
    "Content to cover" : {
      "comment" : "A label displayed under the playback speed picker.",
      "isCommentAutoGenerated" : true
    },
    "Continue Offline" : {
      "comment" : "A button that lets the user continue using the app in offline mode.",
      "isCommentAutoGenerated" : true
    },
    "Continuous Auto-Alignment" : {
      "comment" : "A toggle that enables continuous auto-alignment of audio transcription.",
      "isCommentAutoGenerated" : true
...
      }
    },
    "Display Options" : {
      "comment" : "A section in the settings that allows the user to configure display options.",
      "isCommentAutoGenerated" : true
    },
    "Done" : {
      "comment" : "Button to dismiss a modal sheet or settings",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
...
    "Mon 06/08" : {

    },
    "Mon Jun 8" : {

    },
    "More options" : {
      "comment" : "A label displayed in the top header.",
      "isCommentAutoGenerated" : true
    },
    "New Bookmark" : {
      "comment" : "Title for newly created bookmark",
      "extractionState" : "manual",
...
            "state" : "translated",
            "value" : "Uit"
          }
        }
      }
    },
    "OK" : {
      "comment" : "Button to dismiss an alert or confirmation",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
...
      "isCommentAutoGenerated" : true
    },
    "Read companion document" : {
      "comment" : "A",
      "isCommentAutoGenerated" : true
    },
    "Reader" : {
      "comment" : "A label for the reader view.",
      "isCommentAutoGenerated" : true
    },
    "Reader settings" : {
      "comment" : "A button that opens a settings screen.",
      "isCommentAutoGenerated" : true
    },
    "Reader Settings" : {
      "comment" : "The title of a view that lets the user configure the appearance of a card reader.",
      "isCommentAutoGenerated" : true
...
            "state" : "translated",
            "value" : "Tab"
          }
        }
      }
    },
    "Table of Contents" : {
      "comment" : "A label for the button that opens the table of contents.",
      "isCommentAutoGenerated" : true
    },
    "Tap Actions" : {

    },
...
